feat(config-api): user consent mgmt spec
